--- a/src/html/page-search.pug
+++ b/src/html/page-search.pug
@@ -25,55 +25,57 @@ block content
         +e.heading 
           +e.H3.title Результаты поиска по запросу "йога":
           +e.amount Найдено 60 записей в блоге
-        +b.UL.list
+        +e.OL.list
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 1. Как правильно организовать занятия йогой и диету?
-            +e.date 12 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Как правильно организовать занятия йогой и диету?
+            +e.date Опубликовано 12 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 2. Совместимы ли йога и беременность?
-            +e.date 10 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Совместимы ли йога и беременность?
+            +e.date Опубликовано 10 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 3. Философия духа: йога и религия
-            +e.date 10 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Философия духа: йога и религия
+            +e.date Опубликовано 10 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 4. Гармония тела: практика йоги
-            +e.date 9 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Гармония тела: практика йоги
+            +e.date Опубликовано 9 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 5. Как правильно организовать занятия йогой и диету?
-            +e.date 12 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Как правильно организовать занятия йогой и диету?
+            +e.date Опубликовано 12 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 6. Совместимы ли йога и беременность?
-            +e.date 10 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Совместимы ли йога и беременность?
+            +e.date Опубликовано 10 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 7. Философия духа: йога и религия
-            +e.date 10 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Философия духа: йога и религия
+            +e.date Опубликовано 10 мая 2017 г.
           +e.LI.item             
-            +e.H2.title 
-              +e.A.link(href='page.html') 8. Гармония тела: практика йоги
-            +e.date 9 мая 2017 г.
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Гармония тела: практика йоги
+            +e.date Опубликовано 9 мая 2017 г.
 
       // Pagination
-      +b.SECTION.pagination Страница
-        +e.UL.list
-          +e.item 
-            a(href="page.html") 1
-          +e.item 
-            a(href="page.html") 2
-          +e.item 
-            a(href="page.html") 3
-          +e.item 
-            a(href="page.html") 4
-          +e.item 
-            a(href="page.html") 5
-          +e.item 
-            a(href="page.html") 6
+      +b.SECTION.pagination
+        +e.inner
+          +e.SPAN.page Страница
+          +e.UL.list
+            +e.item--active
+              a(href="page.html") 1
+            +e.item 
+              a(href="page.html") 2
+            +e.item 
+              a(href="page.html") 3
+            +e.item 
+              a(href="page.html") 4
+            +e.item 
+              a(href="page.html") 5
+            +e.item 
+              a(href="page.html") 6
 
 
 
