--- a/src/html/page-subscribe.pug
+++ b/src/html/page-subscribe.pug
@@ -21,7 +21,7 @@ block content
           +e.LABEL.label--email
             +e.INPUT.input(type='email', name='Email', placeholder="Электронная почта")
           // Tags
-          +b.FIELDSET.subscribe-interests Интересы:
+          +b.FIELDSET.subscribe-interests
             +e.H3.title Что вас интересует в блоге?
             +e.UL.list
               each val, index in ['автостоп', 'актерское мастерство', 'бизнес', 'видеосъёмка', 'визаж', 'вязание', 'гадание', 'диета', 'дружба', 'домохозяйство', 'здоровье', 'живопись', 'животные', 'искусство', 'йога', 'иностранные языки', 'карьера', 'кино', 'красота', 'кулинария', 'автостоп', 'актерское мастерство', 'бизнес', 'видеосъёмка', 'визаж', 'вязание', 'гадание', 'диета', 'дружба', 'домохозяйство', 'здоровье', 'живопись', 'животные', 'искусство', 'йога', 'иностранные языки', 'карьера', 'кино', 'красота', 'кулинария']
