--- a/src/html/partials/components/_header.pug
+++ b/src/html/partials/components/_header.pug
@@ -5,7 +5,7 @@ include ../abstracts/bemto/bemto.pug
   +e.inner
 
     +e.slogan
-      span Best Girl
+      a(href="index.html") Best Girl
 
     +e.nav                 
       // Nav
