--- a/src/css/partials/components/_header.scss
+++ b/src/css/partials/components/_header.scss
@@ -16,14 +16,17 @@
     }
   }
   &__slogan{
-    flex-basis: 33.33%;
-    color: $grey;
+    flex-basis: 33.33%;    
     font-size: 20px;
     @media (min-width: $screen-md){
       flex-basis: auto;
     }
     @media (min-width: $screen-md){
       flex-basis: 24%;
+    }
+    
+    a{
+      color: $grey;
     }
   }
   &__nav{
@@ -57,6 +60,7 @@
     background-color: $dark-grey;
     display: none;
     position: absolute;
+    z-index: 1;
     top: 100%;
     left: 0;
     @media (min-width: $screen-md){
