--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -24,35 +24,9 @@
 @import "partials/components/btn";
 @import "partials/components/page";
 @import "partials/components/index";
-// @import "partials/components/pagination";
-// @import "partials/components/breadcrumbs";
-// @import "partials/components/marks";
+@import "partials/components/post";
+@import "partials/components/comments";
+@import "partials/components/similar-posts";
 @import "partials/components/footer";
-
-
-// @import "partials/components/business-form";
-// @import "partials/components/offers";
-// @import "partials/components/specialists";
-// @import "partials/components/steps";
-// @import "partials/components/consult";
-// @import "partials/components/expert-answers";
-// @import "partials/components/reviews-section";
-// @import "partials/components/subscribe";
-
-// @import "partials/components/your-info";
-// @import "partials/components/questions-left";
-// @import "partials/components/ask-expert";
-// @import "partials/components/business";
-// @import "partials/components/complex-offered-services";
-// @import "partials/components/succeeded-examples";
-// @import "partials/components/expert-help";
-// @import "partials/components/reviews";
-// @import "partials/components/success-story";
-// @import "partials/components/question-type-choise";
-// @import "partials/components/questions-controls";
-// @import "partials/components/question";
-// @import "partials/components/members";
-// @import "partials/components/services";
-// @import "partials/components/page";
-
-
+@import "partials/components/subscribe";
+@import "partials/components/search";
