--- a/src/html/page.pug
+++ b/src/html/page.pug
@@ -11,25 +11,30 @@ block content
     // Main
     +b.MAIN.main
 
-      // Main img
-      +b.SECTION.main-img
+      // Post
+      +b.ARTICLE.post
+
+        // Main img
         +e.img 
           img(src="img/post1.jpg", alt="post-image", title="post pic")
 
-      // Tags
-      +b.UL.post-tags Интересы:
-        - var tags = ['йога', 'диета', 'здоровье', 'организм', 'девушка', 'фигура', 'медитация'];
-        each val in tags
-          +e.LI.item
-            a(href='#')= val
-        +b.A.btn--like(href="javascript:void(0);") Мне нравится
+        // Tags
+        +e.tags
+          +e.tags-block
+            span Интересы:
+            +b.UL.post-tags 
+              - var tags = ['йога', 'диета', 'здоровье', 'организм', 'девушка', 'фигура', 'медитация'];
+              each val in tags
+                +e.LI.item
+                  a(href='#')= val
+          +b.A.like(href="javascript:void(0);") Мне нравится
 
-      // Post
-      +b.ARTICLE.post
+        // Text
         +e.H3.title Как правильно организовать занятия йогой и диету
         +e.info
           +b.date 12 мая 2017г.
-          +b.author Автор: Александра Полякова
+          +b.author Автор: 
+            span Александра Полякова
         +e.text
           p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Аmet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
           p Dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
@@ -44,17 +49,25 @@ block content
           p Mirum est notare quam littera gothica, quam nunc putamus parum claram, an teposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
 
         +b.control-panel
-          +b.date Опубликовано: 12 мая 2017г.
+          +b.date 
+            span Опубликовано: 
+            | 12 мая 2017г.
           +b.counters
-            +e.looks 101 просмотров
-            +e.comments 2 комментария
-          +e.A.link(href="index.html") Вернуться к списку записей
+            +e.looks 101 
+              span просмотров
+            +e.comments 2 
+              span комментария
+          +e.btn
+            +b.A.link(href="index.html") 
+              span Вернуться к списку записей
 
 
       // Comments
       +b.SECTION.comments
-        +e.H3.title Комментарии
-        +comment('Виктор', '<p>Достаточно интересно узнать о таком достижению девушки. Юные барышни  любят иногда сидеть на диетах, но не всегда делиться секретами...</p>', '13 мая 2017 г.', '12:30 (МСК)')
-        +comment('Александр', '<p>Достаточно интересно узнать о таком достижению девушки. Юные барышни  любят иногда сидеть на диетах, но не всегда делиться секретами...</p>', '14 мая 2017 г.', '15:22 (МСК)')
-        +e.A.add(href="#") Добавить комментарий
+        +e.inner
+          +e.H3.title Комментарии
+          +e.items
+            +comment('Виктор', '<p>Достаточно интересно узнать о таком достижению девушки. Юные барышни  любят иногда сидеть на диетах, но не всегда делиться секретами...</p>', '13 мая 2017 г.', '12:30 (МСК)')
+            +comment('Александр', '<p>Достаточно интересно узнать о таком достижению девушки. Юные барышни  любят иногда сидеть на диетах, но не всегда делиться секретами...</p>', '14 мая 2017 г.', '15:22 (МСК)')
+          +e.A.add(href="#") Добавить комментарий
 
