--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,7 +5,7 @@
 // @import "partials/abstracts/bootstrap-flex";
 @import "vendor/normalize";
 // @import "vendor/mq";
-@import "vendor/slick";
+// @import "vendor/slick";
 
 // Abstracts
 @import "partials/abstracts/mixins";
@@ -16,8 +16,6 @@
 @import "partials/base/template";
 
 // Components
-// @import "partials/components/form";
-// @import "partials/components/form-states";
 
 @import "partials/components/header";
 @import "partials/components/sidebar";
