--- a/src/html/partials/components/_head.pug
+++ b/src/html/partials/components/_head.pug
@@ -15,8 +15,6 @@ head
   meta(name="description", content= siteName)
   meta(name="author", content="")
 
-  link(rel='stylesheet', href='css/style.min.css')
+  link(rel='stylesheet', href='css/style.css')
 
-  script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
-
-  link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic", rel="stylesheet")
+  //- script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
