--- a/src/css/partials/components/_comments.scss
+++ b/src/css/partials/components/_comments.scss
@@ -13,7 +13,7 @@
   &__title{
     margin: 0;
     padding: 15px 10px 5px;
-    font-weight: normal;
+    @include font-family('Roboto Regular', normal, normal);
     font-size: 15px;
     border-bottom: 1px solid #eaeaea;
     @media (min-width: $screen-md){
