--- a/src/css/partials/components/_page.scss
+++ b/src/css/partials/components/_page.scss
@@ -38,7 +38,7 @@
           font-size: 11px;
           line-height: (16/11);
         }
-        @media (min-width: $screen-md){
+        @media (min-width: $screen-xl){
           padding: 0 20px;
           font-size: 13px;
         }
@@ -67,6 +67,7 @@
       }
       &__btn{
         flex-basis: 100%;
+        background-color: transparent;         
       }
       &__link{
         display: none;
