--- a/src/css/partials/components/_sidebar.scss
+++ b/src/css/partials/components/_sidebar.scss
@@ -18,11 +18,10 @@
   flex-wrap: wrap;
   align-items: center;
   @media (min-width: $screen-md){
-    padding: 5px 20px;
+    padding: 0 20px;
   }
   @media (min-width: $screen-xl){
-    flex-direction: column;
-    justify-content: flex-start;
+    display: block;
     padding: 5px 0;
   }
 
@@ -69,8 +68,7 @@
   &__title{
     padding-left: 10px;
     margin: 0;
-    font-weight: 100;
-    font-weight: normal;
+    @include font-family('Roboto Light', normal, normal);
     font-size: 11px;
     line-height: (14/11);    
     color: $text-dark-grey;
@@ -88,8 +86,8 @@
     }
 
     span{
-      display: block;      
-      font-weight: bold;
+      display: block;  
+      @include font-family('Roboto Bold', normal, normal);    
       font-size: 15px;
       line-height: 1;
       @media (min-width: $screen-md){
@@ -125,8 +123,10 @@
     @media (min-width: $screen-md){
       background-color: transparent;
       border-right: none;
-      flex-basis: auto;
-      background-image: initial;
+      flex-basis: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   &__link{
@@ -156,11 +156,15 @@
     background-color: $light-grey;
     padding-left: 20px;
     flex-grow: 1;
-    flex-basis: auto;
+    flex-basis: 100%;
+    border-left: 1px solid $white;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   @media (min-width: $screen-xl){
     padding: 0 20px;
     width: 100%;
+    border-left: none;
     border-top: 1px solid $white;
   }
 
@@ -168,7 +172,7 @@
     display: none;
     @media (min-width: $screen-xl){
       display: block;
-      font-weight: normal;
+      @include font-family('Roboto Regular', normal, normal);
       font-size: 15px;
       color: $text-grey;
       margin: 0;
@@ -210,7 +214,7 @@
   }
   &__link{
     color: $text-dark-grey;
-    font-weight: bold;
+    @include font-family('Roboto Bold', normal, normal);
     display: inline-block;
     width: 100%;
     padding: 10px 0;
@@ -224,7 +228,7 @@
     position: absolute;
     bottom: 10px;
     right: 0;
-    font-weight: normal;
+    @include font-family('Roboto Regular', normal, normal);
   }
 }
 .sub-categories{
@@ -306,7 +310,7 @@
 
   &__title{
     margin: 0 0 10px;
-    font-weight: normal;
+    @include font-family('Roboto Regular', normal, normal);
     font-size: 13px;
     line-height: (20/13);
     @media (min-width: $screen-md){
@@ -355,7 +359,7 @@
     }
   }
   .btn{
-    font-weight: normal;
+    @include font-family('Roboto Regular', normal, normal);
     @media (min-width: $screen-xl){
       margin-top: 5px;
     }
