--- a/src/css/partials/components/_similar-posts.scss
+++ b/src/css/partials/components/_similar-posts.scss
@@ -8,7 +8,7 @@
     padding: 10px 20px;
     margin: 0;
     font-size: 15px;
-    font-weight: normal;
+    @include font-family('Roboto Regular', normal, normal);
   }
   &__list{
     padding-left: 0;
@@ -35,7 +35,7 @@
   }
   &__subtitle{
     margin: 0;
-    font-weight: bold;
+    @include font-family('Roboto Bold', normal, normal);
     font-size: 13px;
     line-height: (20/13);   
   }
