--- a/src/css/partials/components/_similar-posts.scss
+++ b/src/css/partials/components/_similar-posts.scss
@@ -23,7 +23,7 @@
   &__link{
     padding: 5px 20px;
     display: block;
-    color: $text-grey;
+    color: $text-dark-grey;
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
     &:hover, &:focus {
