--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -3,7 +3,7 @@ include partials/abstracts/mixins/_post.pug
 
 block content
   +b.page--index
-    //- - var index = true
+    - var index = true
 
     // Sidebar
     include partials/components/_sidebar.pug  
@@ -29,9 +29,9 @@ block content
 
       // Articles
       +b.articles
-        +post('Как правильно организовать занятия йогой и диету', '12 мая 2017г.', 'Александра Полякова', 'post1', ['йога', 'диета', 'здоровье', 'организм', 'девушка', 'фигура', 'медитация'])
-        +post('Основные правила диеты Дюкана', '9 мая 2017г.', 'Александра Полякова', 'post2', ['диета', 'здоровье', 'организм', 'фигура', 'дюкан'])
-        +post('Танцы как способ защиты от стресса', '8 мая 2017г.', 'Александра Полякова', 'post1', ['танцы', 'отдых', 'стресс', 'релаксация'])
+        +post('Как правильно организовать занятия йогой и диету', '12 мая 2017 г.', 'Александра Полякова', 'post1', ['йога', 'диета', 'здоровье', 'организм', 'девушка', 'фигура', 'медитация'])
+        +post('Основные правила диеты Дюкана', '9 мая 2017 г.', 'Александра Полякова', 'post2', ['диета', 'здоровье', 'организм', 'фигура', 'дюкан'])
+        +post('Танцы как способ защиты от стресса', '8 мая 2017 г.', 'Александра Полякова', 'post1', ['танцы', 'отдых', 'стресс', 'релаксация'])
 
       // Pagination
       +b.SECTION.pagination
@@ -50,7 +50,7 @@ block content
               a(href="page.html") 5
             +e.item 
               a(href="page.html") 6
-          +e.A.back(href="page.html") Вернуться в начало
+          +e.A.back(class="up" href="page.html") Вернуться в начало
 
 
 
