--- a/src/html/page-subscribe.pug
+++ b/src/html/page-subscribe.pug
@@ -16,15 +16,17 @@ block content
         +e.FORM.form(action='', method='')
           +e.LABEL.label
             +e.INPUT.input(type='text', name='Имя', placeholder="Укажите ваше полное имя")
+            +e.DIV.error Укажите ваше имя на русском языке
           +e.LABEL.label
             +e.INPUT.input(type='text', name='Фамилия', placeholder="Фамилия")
+            +e.DIV.error Укажите вашу фамилию на русском языке
           +e.LABEL.label--email
             +e.INPUT.input(type='email', name='Email', placeholder="Электронная почта")
           // Tags
           +b.FIELDSET.subscribe-interests
-            +e.H3.title Что вас интересует в блоге?
+            +e.H2.title Укажите интересующие темы блога
             +e.UL.list
-              each val, index in ['автостоп', 'актерское мастерство', 'бизнес', 'видеосъёмка', 'визаж', 'вязание', 'гадание', 'диета', 'дружба', 'домохозяйство', 'здоровье', 'живопись', 'животные', 'искусство', 'йога', 'иностранные языки', 'карьера', 'кино', 'красота', 'кулинария', 'автостоп', 'актерское мастерство', 'бизнес', 'видеосъёмка', 'визаж', 'вязание', 'гадание', 'диета', 'дружба', 'домохозяйство', 'здоровье', 'живопись', 'животные', 'искусство', 'йога', 'иностранные языки', 'карьера', 'кино', 'красота', 'кулинария']
+              each val, index in ['Искусство и творчество', 'Семья и отношения', 'Красота и здоровье', 'Религия и философия', 'Карьера и развитие', 'Спорт и отдых']
                 +e.item 
                   +e.INPUT.input(type='checkbox', name= val, id='subscribe'+index)
                   +e.LABEL.label(for='subscribe'+index)= val
