--- a/src/css/partials/abstracts/_variables.scss
+++ b/src/css/partials/abstracts/_variables.scss
@@ -81,7 +81,7 @@ $text-light-grey:             #999999;
 $text-grey:                   #666666;
 $text-dark-grey:              #333333;
 
-$text-shadow:                 0px 1px 1px rgba(255, 255, 255, 0.004);
+$text-shadow:                 0 1px 2px #fff;
 
 
 // $success:                     #00ff00;
