--- a/src/css/partials/abstracts/mixins/_font-face.scss
+++ b/src/css/partials/abstracts/mixins/_font-face.scss
@@ -53,7 +53,7 @@
 
   @include font-family('Roboto-Regular', normal, italic);
 */
-@mixin font-family($font-family, $font-weight:normal, $font-style:normal, $font-callback:sans-serif) {
-  font-family: $font-family, $font-callback;
+@mixin font-family($font-family, $font-weight:normal, $font-style:normal, $font-callback: sans-serif) {
+  font-family: $font-family, Arial, $font-callback;
   font-weight: $font-weight; font-style: $font-style;
 }
