--- a/src/css/partials/components/_comments.scss
+++ b/src/css/partials/components/_comments.scss
@@ -22,6 +22,7 @@
     }
   }
   &__add{
+    font-size: 14px;
     display: block;
     padding: 10px 0;
     background-color: #f0f0f0;
@@ -64,12 +65,16 @@
 
   &__person{
     display: block;
-    margin: 10px 0;
+    margin: 10px 0 0;
     font-size: 13px;
   }
   &__text{
-    font-size: 13px;
-    line-height: (22/13);
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 1.38462;
+    p{
+      margin: 0;
+    }
   }
   &__time{
     color: $text-light-grey;
