--- a/src/css/partials/components/_sidebar.scss
+++ b/src/css/partials/components/_sidebar.scss
@@ -55,6 +55,7 @@
   }
 
   &__img{
+    display: block;
     flex: 0 0 auto;
     text-align: center;
     @media (min-width: $screen-md){
@@ -102,6 +103,7 @@
     }
   }
   &__warning{
+    text-align: center;
     font-size: 9px;
     line-height: (20/9);
     color: $text-light-grey;
@@ -130,6 +132,8 @@
     }
   }
   &__link{
+    font-size: 14px;
+    text-shadow: 0 1px 2px #fff;
     display: block;
     line-height: 34px;    
     color: $text-dark-grey;    
@@ -146,13 +150,11 @@
 }
 
 .categories{
-  // margin-top: 20px;
   text-align: left;
   background-color: $grey;
   position: relative;
   flex-basis: 50%;
   @media (min-width: $screen-md){
-    // margin-top: 0;
     background-color: $light-grey;
     padding-left: 20px;
     flex-grow: 1;
@@ -191,6 +193,7 @@
     top: 100%;
     right: 0;
     border-top: 1px solid #fff;
+    font-size: 16px;
 
     @media (min-width: $screen-md){
       // top: 100%;
@@ -225,8 +228,9 @@
     }
   }
   &__counter{
+    font-size: 12px;
     position: absolute;
-    bottom: 10px;
+    bottom: 12px;
     right: 0;
     @include font-family('Roboto Regular', normal, normal);
   }
@@ -245,12 +249,14 @@
       position: relative;
       border-bottom: 1px solid #dbdbdb;
       &:hover, &:focus {
+        color: $red;
         text-decoration: none;
       }
     }
   }
 }
 .cat-hamburger{
+  font-size: 14px;
   text-align: center;
   color: #424242;
   text-shadow: $text-shadow;
@@ -292,13 +298,13 @@
 
 .invitation{
   display: none;
-  padding: 15px 15px;
+  padding: 10px 15px;
   color: $text-grey;
   @media (min-width: $screen-md){
     flex-basis: 100%;
     max-width: 100%;
     background-color: $white;
-    padding: 15px 20px;
+    padding: 30px 20px 15px;
     // display: flex;
     align-items: center;
   }
@@ -333,19 +339,34 @@
   &__label{
     flex: 1 1 auto;
     display: block;
+    position: relative;
+    &:before{
+      content: '';
+      display: inline-block;
+      @include sprite($s-mail);
+      opacity: .8;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 10px;
+      display: none;
+      @media (min-width: $screen-xl){
+        display: block;
+      }
+    }
   }
   &__input{
     width: 100%;
-    color: $text-grey;
+    color: #5d5d5d;
     background-color: $white;
-    padding: 8px 10px;    
+    padding: 8px 35px 8px 10px;    
     border: 1px solid $grey;
     outline: none;
     &::-webkit-input-placeholder{
-      color: $text-grey;         
+      color: #5d5d5d;         
     }       
     &::placeholder{
-      color: $text-grey;         
+      color: #5d5d5d;         
     }
     &:focus::-webkit-input-placeholder{
       color: transparent;         
