--- a/src/css/partials/components/_subscribe.scss
+++ b/src/css/partials/components/_subscribe.scss
@@ -64,6 +64,9 @@
         transform: translateY(-50%);
         right: 10px;
       }
+      input{
+        padding-right: 35px;
+      }
     }
   }
   &__input{
@@ -71,17 +74,17 @@
     padding: 5px;
     border: 1px solid #b0b0b0;
     background-color: #fff;
-    color: $text-grey;
+    color: #5d5d5d;
     @media (min-width: $screen-xl){
       font-size: 16px;
       padding: 10px;
     }
 
     &::-webkit-input-placeholder{
-      color: $text-grey;         
+      color: #5d5d5d;         
     }       
     &::placeholder{
-      color: $text-grey;         
+      color: #5d5d5d;         
     }
     &:focus::-webkit-input-placeholder{
       color: transparent;         
@@ -89,6 +92,12 @@
     &:focus::placeholder{
       color: transparent;         
     }
+  }
+  &__error{
+    display: none;
+    padding: 0 5px;
+    font-size: 13px;
+    color: $red;
   }
   &__btn{
     text-align: center;
@@ -141,11 +150,11 @@
     padding-bottom: 10px;
     margin: 0;
     list-style-type: none;
-    columns: 2;
+    // columns: 2;
     font-size: 13px;
     // line-height: (28/13);
     @media (min-width: $screen-md){
-      columns: 4;
+      // columns: 4;
     }
     @media (min-width: $screen-md){
       font-size: 14px;
