--- a/src/html/page-search.pug
+++ b/src/html/page-search.pug
@@ -58,6 +58,14 @@ block content
             +e.H2.subtitle 
               +e.A.link(href='page.html') Гармония тела: практика йоги
             +e.date Опубликовано 9 мая 2017 г.
+          +e.LI.item             
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Философия духа: йога и религия
+            +e.date Опубликовано 10 мая 2017 г.
+          +e.LI.item             
+            +e.H2.subtitle 
+              +e.A.link(href='page.html') Гармония тела: практика йоги
+            +e.date Опубликовано 9 мая 2017 г.
 
       // Pagination
       +b.SECTION.pagination
@@ -76,8 +84,6 @@ block content
               a(href="page.html") 5
             +e.item 
               a(href="page.html") 6
-
-
-
+          +e.A.back(class="up" href="page.html") Вернуться в начало
 
 
