--- a/src/html/partials/abstracts/mixins/_post.pug
+++ b/src/html/partials/abstracts/mixins/_post.pug
@@ -1,13 +1,14 @@
 mixin post(title, date, author, img, tags)
 
   +b.ARTICLE.post
-    +e.H3.title #{title}
+    +e.H3.title 
+      a(href="page.html" title= title) #{title}
     +e.info
       +b.date #{date}
       +b.author Автор: 
         span #{author}
-    +e.img 
-      img(src='img/'+img+'.jpg', alt=title, title=title)
+    +e.A.img(href="page.html") 
+      img(src='img/'+img+'.jpg', alt=title)
     +b.UL.post-tags
       each val in tags
         +e.LI.item
@@ -17,18 +18,12 @@ mixin post(title, date, author, img, tags)
 
     +b.control-panel
       +b.A.btn--more(href="page.html") Читать дальше
-      +b.functions 
-        +b.counters
-          +e.looks 101
-          +e.comments 12
-        +b.A.link(href="page.html") Комментировать
-        //- +e.UL.social-list
-        //-   +e.LI.item--vk
-        //-     a(href='#') 
-        //-   +e.LI.item--fb
-        //-     a(href='#') 
-        //-   +e.LI.item--instagram
-        //-     a(href='#') 
+      +b.functions
+        +e.wrapper
+          +b.counters
+            +e.looks 101
+            +e.comments 12
+          +b.A.link(href="page.html") Комментировать
         +b.A.like(href="javascript:void(0);") 
           span Мне нравится
 
