--- a/src/html/partials/components/_header.pug
+++ b/src/html/partials/components/_header.pug
@@ -12,13 +12,13 @@ include ../abstracts/bemto/bemto.pug
       +b.NAV.nav
         +e.UL.list
           +e.item 
-            +e.A.link(href="page.html") Женский блог
-          +e.item 
-            +e.A.link(href="page.html") Интересы
+            +e.A.link(href="index.html") Женский блог
+          //- +e.item 
+          //-   +e.A.link(href="page.html") Интересы
           +e.item 
             +e.A.link(href="page.html") Популярное
           +e.item 
-            +e.A.link(href="page.html") Подписка
+            +e.A.link(href="page-subscribe.html") Подписка
 
         +e.hamburger
           +b.A.main-hamburger(href="#")
@@ -31,7 +31,7 @@ include ../abstracts/bemto/bemto.pug
         +e.FORM.form(action='', method='')
           +e.LABEL.label
             +e.INPUT.input(type='text', name='Поиск', placeholder="Поиск по сайту")
-          //- +b.BUTTON.btn(type='submit') 
+            +b.BUTTON.loupe(type="submit")
 
 
 
