--- a/src/css/partials/components/_sidebar.scss
+++ b/src/css/partials/components/_sidebar.scss
@@ -145,6 +145,10 @@
     display: none;
     @media (min-width: $screen-md){
       display: inline-block;
+      visibility: hidden;
+    }
+    @media (min-width: $screen-xl){
+      visibility: visible;
     }
   }
 }
