--- a/src/css/partials/components/_search.scss
+++ b/src/css/partials/components/_search.scss
@@ -78,7 +78,7 @@
     }
     @media (min-width: $screen-xl){
       font-size: 16px;
-      padding: 10px;
+      padding: 9px;
     }
   }
   .btn{
@@ -90,7 +90,7 @@
       padding-top: 3px;
       padding-bottom: 4px;
     }
-    @media (min-width: $screen-md){
+    @media (min-width: $screen-xl){
       padding: 8px 20px;
     }
   }
